objects/Parametri_Fattibilita__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Fascia1__c</fullName>
        <label>Fascia 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fascia2__c</fullName>
        <label>Fascia 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fascia3__c</fullName>
        <label>Fascia 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fattibilità - Parametri</label>
</CustomObject>